infrastructure/network/dev/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-cdn-belovr
  namespace: belovr
  annotations:
    argocd.argoproj.io/sync-wave: "15"
  labels:
    app.kubernetes.io/part-of: belovr-platform
spec:
  type: ExternalName
  externalName: cdn.belovr.com
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-images-belovr
  namespace: belovr
  annotations:
    argocd.argoproj.io/sync-wave: "15"
  labels:
    app.kubernetes.io/part-of: belovr-platform
spec:
  type: ExternalName
  externalName: images.belovr.com
